bookDisplay.css was updated; space and alignment were fixed

--- a/frontend/src/components/bookDisplay.css
+++ b/frontend/src/components/bookDisplay.css
@@ -1,9 +1,21 @@
 
-.bookRectangle{
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    row-gap: 0px;
+    margin: 10px;
+}
+
+.picDiv{
     width: 150px;
     height: 200px;
     border: 1px solid black;
     background-color: tomato;
-    margin: 10px;
     padding: 10px;
+}
+
+
+.textDiv{
+    width: 150px;
 }
